Update and rename playground/tsconfig.json to tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "references": [
-   { "path": "./src" }, { "path": "./code-oss" }
+   { "path": "./code-oss" }
   ],
   "include": [
     "./extensions/bootstrap-web-playground/extension.ts",
